# copilot-cli

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-please.yml  release.yml  rust.yml
docs/: README_zh.md
docs/en/: ConfigFile.md
docs/zh/: ConfigFile.md
src/: main.rs  request_body.rs  runtime_config.rs
