[package]
name = "copilot-cli"
version = "0.1.0"
edition = "2021"
authors = ['Achan Yao']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
sys-info = "0.9"
once_cell = "1.19.0"