[package]
name = "copilot-cli"
version = "2.0.0"
edition = "2021"
authors = ['Achan Yao']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
sys-info = "0.9"
once_cell = "1.19.0"
log = "0.4"
simplelog = "0.11"
indicatif = "0.16"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }